i18n of several browser messages

BUG=613683
TEST=Switch to language with non-Arabic numerals (e.g., Persian), view
the various messages described in 613683, check that numbers
are rendered with non-Arabic numerals.

Review-Url: https://codereview.chromium.org/2002673003
Cr-Commit-Position: refs/heads/master@{#396558}

Former-commit-id: e6ffe53e5189609c8d93784c31ce347d63eed693